--- a/base_di_partenza/index.html
+++ b/base_di_partenza/index.html
@@ -35,109 +35,255 @@
       </div>
 
       <section class="all-section">
-      <div class="all">
-        <div class="numero"><p>01</p></div>
-        <div class="font">
-          <img src="./assets/imgs/image01.jpeg" alt="photo 1" />
-          <p class="par">Tom Cooper</p>
-        <div>
-          <p class="space1">Ukraine War, 23 October 2022</p>
-         <div class="space"><span>Oct 23</span> <span>·</span> <span>5 min read</span>
-         </div> 
+        <div class="all">
+          <div class="numero"><p>01</p></div>
+          <div class="font">
+            <img src="./assets/imgs/image01.jpeg" alt="photo 1" />
+            <p class="par">Tom Cooper</p>
+            <div>
+              <p class="space1">Ukraine War, 23 October 2022</p>
+              <div class="space">
+                <span>Oct 23</span> <span>·</span> <span>5 min read</span>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-</section>
+      </section>
 
-<section class="all-section">
-    <div class="all">
-      <div class="numero"><p>02</p></div>
-      <div class="font">
-        <img src="./assets/imgs/image02.png" alt="photo 1" />
-        <p class="par">Arthur Hayes in Entrepreneur's Handbook</p>
-      <div>
-        <p class="space1">Comeback</p>
-       <div class="space"><span>Oct 26</span> <span>·</span> <span>24 min read</span>
-       </div> 
-      </div>
-    </div>
-  </div>
-</section>
+      <section class="all-section">
+        <div class="all">
+          <div class="numero"><p>02</p></div>
+          <div class="font">
+            <img src="./assets/imgs/image02.png" alt="photo 2" />
+            <p class="par">Arthur Hayes in Entrepreneur's Handbook</p>
+            <div>
+              <p class="space1">Comeback</p>
+              <div class="space">
+                <span>Oct 26</span> <span>·</span> <span>24 min read</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-<section class="all-section">
-    <div class="all">
-      <div class="numero"><p>03</p></div>
-      <div class="font">
-        <img src="./assets/imgs/image03.jpeg" alt="photo 1" />
-        <p class="par">Tom Cooper</p>
-      <div>
-        <p class="space1">How I Learned to Love My Breasts Even Though One Is A Horcrux <br> For Voldemor</p>
-       <div class="space"><span>Oct 26</span> <span>·</span> <span>2 min read</span>
-       </div> 
-      </div>
-    </div>
-  </div>
-</section>
+      <section class="all-section">
+        <div class="all">
+          <div class="numero"><p>03</p></div>
+          <div class="font">
+            <img src="./assets/imgs/image03.jpeg" alt="photo 3" />
+            <p class="par">Tom Cooper</p>
+            <div>
+              <p class="space1">
+                How I Learned to Love My Breasts Even Though One Is A Horcrux
+                <br />
+                For Voldemor
+              </p>
+              <div class="space">
+                <span>Oct 26</span> <span>·</span> <span>2 min read</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-<section class="all-section">
-    <div class="all">
-      <div class="numero"><p>04</p></div>
-      <div class="font">
-        <img src="./assets/imgs/image04.png" alt="photo 1" />
-        <p class="par">Frank Mastropolo in The Riffk</p>
-      <div>
-        <p class="space1">The Night Paul McCartney Donned a Disguise at Fillmore East</p>
-       <div class="space"><span>Oct 22</span> <span>·</span> <span>3 min read</span>
-       </div> 
-      </div>
-    </div>
-  </div>
-</section>
+      <section class="all-section">
+        <div class="all">
+          <div class="numero"><p>04</p></div>
+          <div class="font">
+            <img src="./assets/imgs/image04.png" alt="photo 4" />
+            <p class="par">Frank Mastropolo in The Riffk</p>
+            <div>
+              <p class="space1">
+                The Night Paul McCartney Donned a Disguise at Fillmore East
+              </p>
+              <div class="space">
+                <span>Oct 22</span> <span>·</span> <span>3 min read</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-<section class="all-section">
-    <div class="all">
-      <div class="numero"><p>05</p></div>
-      <div class="font">
-        <img src="./assets/imgs/image05.jpeg" alt="photo 1" />
-        <p class="par">Frank Andrade in Towards Data Science</p>
-      <div>
-        <p class="space1">5 Python Projects to Automate Your Life: From Beginner to Advanced</p>
-       <div class="space"><span>Oct 13</span> <span>·</span> <span>6 min read</span>
-       </div> 
-      </div>
-    </div>
-  </div>
-</section>
+      <section class="all-section">
+        <div class="all">
+          <div class="numero"><p>05</p></div>
+          <div class="font">
+            <img src="./assets/imgs/image05.jpeg" alt="photo 11" />
+            <p class="par">Frank Andrade in Towards Data Science</p>
+            <div>
+              <p class="space1">
+                5 Python Projects to Automate Your Life: From Beginner to
+                Advanced
+              </p>
+              <div class="space">
+                <span>Oct 13</span> <span>·</span> <span>6 min read</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-<section class="all-section">
-    <div class="all">
-      <div class="numero"><p>06</p></div>
-      <div class="font">
-        <img src="./assets/imgs/image06.png" alt="photo 1" />
-        <p class="par">Wesley Smits in JavaScript in Plain English</p>
-      <div>
-        <p class="space1">How To Make Visual Studio Code Look Amazing</p>
-       <div class="space"><span>Oct 20</span> <span>·</span> <span>7 min read</span>
-       </div> 
-      </div>
-    </div>
-  </div>
-</section>
+      <section class="all-section">
+        <div class="all">
+          <div class="numero"><p>06</p></div>
+          <div class="font">
+            <img src="./assets/imgs/image06.png" alt="photo 6" />
+            <p class="par">Wesley Smits in JavaScript in Plain English</p>
+            <div>
+              <p class="space1">How To Make Visual Studio Code Look Amazing</p>
+              <div class="space">
+                <span>Oct 20</span> <span>·</span> <span>7 min read</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
-        <h3>DISCOVER MORE OF WHAT MATTERS TO YOU</h3>
-        <div>
-            <p>Programming</p>
-            <p>Data Science</p>
-            <p>Technology</p>
-            <p>Self Improvement</p>
-            <p class="write">Writing</p>
-            <p>Relationships</p>
-            <p>Machine Learning</p>
-            <p>Productivity</p>
-            <p class="write">Politics</p>
+      <h3>DISCOVER MORE OF WHAT MATTERS TO YOU</h3>
+      <div class="content" id="first">
+        <p>Programming</p>
+        <p>Data Science</p>
+        <p>Technology</p>
+        <p>Self Improvement</p>
+        <p class="write">Writing</p>
+        <p>Relationships</p>
+        <p>Machine Learning</p>
+        <p>Productivity</p>
+        <p class="write">Politics</p>
+      </div>
+      <hr />
+      <section>
+        <p>Help</p>
+        <p>Status</p>
+        <p>Writers</p>
+        <p>Blog</p>
+        <p>Careers</p>
+        <p>Privacy</p>
+        <p>Terms</p>
+        <p>About</p>
+        <p>Knowable</p>
+      </section>
+      <article>
+        <div class="all-footer">
+          <div class="com">
+            <img class="size" src="./assets/imgs/image07.jpeg" alt="photo 7" />
+            <p class="scri">Robert Roy Britt</p>
+            <div class="first">
+              <p class="pad">How Old is Old?</p>
+            </div>
+              <span>
+                What we consider “old” changes <br> dramatically with age, and our...
+              </span>
+              <div class="second">
+                <span>Oct 27 · 5 min read ·</span> <span class="news">Aging</span>
+            <img class="fusione" src="/base_di_partenza/assets/imgs/svg/star.svg" alt="star"> <img class="book" src="/base_di_partenza/assets/imgs/svg/bookmark.svg" alt="bookmark">
         </div>
-        <hr>
+                <div class="move"><img src="/base_di_partenza/assets/imgs/image08.jpeg" alt="ragazza che sorride in modo strano verso di te"></div>
+              </div>
+            </div>
+      </article>
+
+ <article>
+        <div class="all-footer">
+          <div class="com">
+            <img class="size" src="./assets/imgs/image09.jpeg" alt="photo 9" />
+            <p class="scri">Taru Anniina Liikanen</p>
+            <div class="first">
+              <p class="pad">Is Taylor Swift Allowed to <br> Speak About Fat?</p>
+            </div>
+              <span>
+                Can you speak about your trauma if you <br>don't look traumatized?
+              </span>
+              <div class="second">
+                <span>Oct 24 · 6 min read ·</span> <span class="news">Health</span>
+            <img class="fusione" src="/base_di_partenza/assets/imgs/svg/star.svg" alt="star"> <img class="book" src="/base_di_partenza/assets/imgs/svg/bookmark.svg" alt="bookmark">
+        </div>
+                <div id="Taylor"><img src="/base_di_partenza/assets/imgs/image10.jpeg" alt="Taylor Swift nel bel mezzo di un concerto che non è l'eras tour"></div>
+              </div>
+            </div>
+      </article>
+
+      <article>
+        <div class="all-footer">
+          <div class="com">
+            <img class="size" src="./assets/imgs/image11.jpeg" alt="photo 11" />
+            <p class="scri">David Rodenas, Ph. D.</p>
+            <div class="first">
+              <p class="pad">Don’t Screw Up, You Will Be <br>Found Guilty</p>
+            </div>
+              <span>
+Software Engineer, yours is the right to <br>produce high-quality work at all times...
+              </span>
+              <div class="second">
+                <span>Oct 15· 5 min ·read</span> <span class="news">Software Engineering</span>
+            <img class="fusione" src="/base_di_partenza/assets/imgs/svg/star.svg" alt="star"> <img class="book-maker" src="/base_di_partenza/assets/imgs/svg/bookmark.svg" alt="bookmark">
+        </div>
+                <div id="vignetta"><img src="/base_di_partenza/assets/imgs/image12.png" alt="vignetta"></div>
+              </div>
+            </div>
+      </article>
+
+      <article>
+        <div class="all-footer">
+          <div class="com">
+            <img class="size" src="./assets/imgs/image13.png" alt="photo 13" />
+            <p class="scri">Microsoft Design</p>
+            <div class="first">
+              <p class="pad">Leave No Trace</p>
+            </div>
+              <span>
+                How product designers can break from <br>the status quo and help our planet
+              </span>
+              <div class="second">
+                <span>Oct 25 · 11 min read ·</span> <span class="news">Sustainability </span>
+            <img class="fusione" src="/base_di_partenza/assets/imgs/svg/star.svg" alt="star"> <img id="mark" src="/base_di_partenza/assets/imgs/svg/bookmark.svg" alt="bookmark">
+        </div>
+                <div id="paesaggio"><img src="./assets/imgs/image14.png" alt="paesaggio"></div>
+              </div>
+            </div>
+      </article>
+
+      <article>
+        <div class="all-footer">
+          <div class="com">
+            <img id="pallina" src="./assets/imgs/image17.png" alt="photo 17" />
+            <p class="scri">Paul A. DeStefanoin Human Parts
+            </p>
+            <div class="first">
+              <p class="pad">What I Overheard as an <br>Escape Room Actor</p>
+            </div>
+              <span>
+                Lock a group of people in a room and <br> you’ll witness some surprising ...
+              </span>
+              <div class="second">
+                <span>Jan 18 · 6 min read ·</span> <span class="news">Experiences</span>
+            <img class="fusione" src="/base_di_partenza/assets/imgs/svg/star.svg" alt="star"> <img class="book-maker" src="/base_di_partenza/assets/imgs/svg/bookmark.svg" alt="bookmark">
+        </div>
+                <div class="move"><img src="/base_di_partenza/assets/imgs/image18.jpeg" alt="sfondo rosso"></div>
+              </div>
+            </div>
+      </article>
+
+      <article>
+        <div class="all-footer">
+          <div class="com">
+            <img class="size" src="./assets/imgs/image19.jpeg" alt="photo 19" />
+            <p class="scri">Kim Scott</p>
+            <div class="first">
+              <p class="pad">6 Steps for Setting <br> Measurable Goals to Avoid <br>“Productivity Paranoia”</p>
+            </div>
+              <span>
+                With more people working in remote and <br> hybrid environments than ever before...
+              </span>
+              <div class="second">
+                <span>Oct 24 · 6 min read ·</span> <span class="news">Health</span>
+            <img class="fusione" src="/base_di_partenza/assets/imgs/svg/star.svg" alt="star"> <img id="book2" src="/base_di_partenza/assets/imgs/svg/bookmark.svg" alt="bookmark">
+        </div>
+                <div id="lavagna"><img src="/base_di_partenza/assets/imgs/image20.jpg" alt="lavagna"></div>
+              </div>
+            </div>
+      </article>
     </footer>
     <!-- ARTWORK con "M" ripetute -->
     <svg
