--- a/base_di_partenza/index.html
+++ b/base_di_partenza/index.html
@@ -247,6 +247,26 @@ Software Engineer, yours is the right to <br>produce high-quality work at all ti
       <article>
         <div class="all-footer">
           <div class="com">
+            <img class="size" src="./assets/imgs/image13.png" alt="photo 13" />
+            <p class="scri">Scott H. Young</p>
+            <div class="first">
+              <p class="pad">Variability, Not Repetition, is <br>the Key to Mastery</p>
+            </div>
+              <span>
+                Bruce Lee is reported to have said, “I fear  <br>not the man who has practiced 10,000...
+              </span>
+              <div class="second">
+                <span>Oct 26 · 7 min read ·</span> <span class="news">Health </span>
+            <img class="fusione" src="/base_di_partenza/assets/imgs/svg/star.svg" alt="star"> <img id="book2" src="/base_di_partenza/assets/imgs/svg/bookmark.svg" alt="bookmark">
+        </div>
+                <div class="lavagna"><img src="./assets/imgs/image16.jpg" alt="kun.fu"></div>
+              </div>
+            </div>
+      </article>
+
+      <article>
+        <div class="all-footer">
+          <div class="com">
             <img id="pallina" src="./assets/imgs/image17.png" alt="photo 17" />
             <p class="scri">Paul A. DeStefanoin Human Parts
             </p>
@@ -260,7 +280,7 @@ Software Engineer, yours is the right to <br>produce high-quality work at all ti
                 <span>Jan 18 · 6 min read ·</span> <span class="news">Experiences</span>
             <img class="fusione" src="/base_di_partenza/assets/imgs/svg/star.svg" alt="star"> <img class="book-maker" src="/base_di_partenza/assets/imgs/svg/bookmark.svg" alt="bookmark">
         </div>
-                <div class="move"><img src="/base_di_partenza/assets/imgs/image18.jpeg" alt="sfondo rosso"></div>
+                <div class="lavagna"><img src="/base_di_partenza/assets/imgs/image18.jpeg" alt="sfondo rosso"></div>
               </div>
             </div>
       </article>
@@ -280,7 +300,7 @@ Software Engineer, yours is the right to <br>produce high-quality work at all ti
                 <span>Oct 24 · 6 min read ·</span> <span class="news">Health</span>
             <img class="fusione" src="/base_di_partenza/assets/imgs/svg/star.svg" alt="star"> <img id="book2" src="/base_di_partenza/assets/imgs/svg/bookmark.svg" alt="bookmark">
         </div>
-                <div id="lavagna"><img src="/base_di_partenza/assets/imgs/image20.jpg" alt="lavagna"></div>
+                <div class="lavagna"><img src="/base_di_partenza/assets/imgs/image20.jpg" alt="lavagna"></div>
               </div>
             </div>
       </article>
