--- a/base_di_partenza/index.html
+++ b/base_di_partenza/index.html
@@ -13,7 +13,10 @@
   <body>
     <nav>
       <img src="./assets/imgs/svg/logo.svg" alt="logo" />
-      <div>
+      <div class="primo">
+      <div class="hide"><a href="/base_di_partenza/index.html">Our Story</a></div>
+      <div class="hide"> <a href="/base_di_partenza/index.html">Membership</a></div>
+      <div class="hide"> <a href="/base_di_partenza/index.html">Write</a></div>
         <a href="./index.html">Sign In</a>
       </div>
       <div id="last"><p>Get Started</p></div>
@@ -33,7 +36,8 @@
         <img src="./assets/imgs/svg/trending.svg" alt="" />
         <h2>TRENDING ON MEDIUM</h2>
       </div>
-
+ 
+      
       <section class="all-section">
         <div class="all">
           <div class="numero"><p>01</p></div>
@@ -172,36 +176,71 @@
             <div class="first">
               <p class="pad">How Old is Old?</p>
             </div>
-              <span>
-                What we consider “old” changes <br> dramatically with age, and our...
-              </span>
-              <div class="second">
-                <span>Oct 27 · 5 min read ·</span> <span class="news">Aging</span>
-            <img class="fusione" src="/base_di_partenza/assets/imgs/svg/star.svg" alt="star"> <img class="book" src="/base_di_partenza/assets/imgs/svg/bookmark.svg" alt="bookmark">
-        </div>
-                <div class="move"><img src="/base_di_partenza/assets/imgs/image08.jpeg" alt="ragazza che sorride in modo strano verso di te"></div>
-              </div>
+            <span class="visible">
+              What we consider “old” changes <br />
+              dramatically with age, and our...
+            </span>
+            <span class="nascondino">What we consider “old” changes dramatically with age, and <br> our perspectives can be predictive of how well we age</span>
+            <div class="second">
+              <span>Oct 27 · 5 min read ·</span>
+              <span class="news">Aging</span>
+              <img
+                class="fusione"
+                src="/base_di_partenza/assets/imgs/svg/star.svg"
+                alt="star" />
+              <img
+                class="book"
+                src="/base_di_partenza/assets/imgs/svg/bookmark.svg"
+                alt="bookmark" />
             </div>
+            <div class="move" >
+              <img
+                src="/base_di_partenza/assets/imgs/image08.jpeg"
+                alt="ragazza che sorride in modo strano verso di te" />
+            </div>
+          </div>
+        </div>
       </article>
 
- <article>
+      <article>
         <div class="all-footer">
           <div class="com">
             <img class="size" src="./assets/imgs/image09.jpeg" alt="photo 9" />
             <p class="scri">Taru Anniina Liikanen</p>
             <div class="first">
-              <p class="pad">Is Taylor Swift Allowed to <br> Speak About Fat?</p>
+              <p class="pad" id="visible">
+                Is Taylor Swift Allowed to <br />
+                Speak About Fat?
+                <p class="nascondino"> Is Taylor Swift Allowed to Speak About Fat?</p>
+              </p>
             </div>
-              <span>
-                Can you speak about your trauma if you <br>don't look traumatized?
+            <span class="visible">
+              Can you speak about your trauma if you <br />don't look
+              traumatized?
+            </span>
+            <span class="nascondino">
+                Can you speak about your trauma if you don't look <br>
+                traumatized?
               </span>
-              <div class="second">
-                <span>Oct 24 · 6 min read ·</span> <span class="news">Health</span>
-            <img class="fusione" src="/base_di_partenza/assets/imgs/svg/star.svg" alt="star"> <img class="book" src="/base_di_partenza/assets/imgs/svg/bookmark.svg" alt="bookmark">
-        </div>
-                <div id="Taylor"><img src="/base_di_partenza/assets/imgs/image10.jpeg" alt="Taylor Swift nel bel mezzo di un concerto che non è l'eras tour"></div>
-              </div>
+            <div class="second">
+              <span>Oct 24 · 6 min read ·</span>
+              <span class="news">Health</span>
+              <img
+                class="fusione"
+                src="/base_di_partenza/assets/imgs/svg/star.svg"
+                alt="star" />
+              <img
+                class="book"
+                src="/base_di_partenza/assets/imgs/svg/bookmark.svg"
+                alt="bookmark" />
             </div>
+            <div id="Taylor" >
+              <img
+                src="/base_di_partenza/assets/imgs/image10.jpeg"
+                alt="Taylor Swift nel bel mezzo di un concerto che non è l'eras tour" />
+            </div>
+          </div>
+        </div>
       </article>
 
       <article>
@@ -210,18 +249,33 @@
             <img class="size" src="./assets/imgs/image11.jpeg" alt="photo 11" />
             <p class="scri">David Rodenas, Ph. D.</p>
             <div class="first">
-              <p class="pad">Don’t Screw Up, You Will Be <br>Found Guilty</p>
+              <p class="pad" id="visible">Don’t Screw Up, You Will Be <br />Found Guilty</p>
+              <p class="pad" id="nascondino">Don’t Screw Up, You Will Be Found Guilty</p>
             </div>
-              <span>
-Software Engineer, yours is the right to <br>produce high-quality work at all times...
-              </span>
-              <div class="second">
-                <span>Oct 15· 5 min ·read</span> <span class="news">Software Engineering</span>
-            <img class="fusione" src="/base_di_partenza/assets/imgs/svg/star.svg" alt="star"> <img class="book-maker" src="/base_di_partenza/assets/imgs/svg/bookmark.svg" alt="bookmark">
+            <span class="visible">
+              Software Engineer, yours is the right to <br />produce
+              high-quality work at all times...
+            </span >
+            <span class="nascondino">Software Engineer, yours is the right to produce high-quality <br> work at all times, also the liability.</span>
+            <div class="second">
+              <span>Oct 15· 5 min ·read</span>
+              <span class="news">Software Engineering</span>
+              <img
+                class="fusione"
+                src="/base_di_partenza/assets/imgs/svg/star.svg"
+                alt="star" />
+              <img
+                class="book-maker"
+                src="/base_di_partenza/assets/imgs/svg/bookmark.svg"
+                alt="bookmark" />
+            </div>
+            <div id="vignetta">
+              <img
+                src="/base_di_partenza/assets/imgs/image12.png"
+                alt="vignetta" />
+            </div>
+          </div>
         </div>
-                <div id="vignetta"><img src="/base_di_partenza/assets/imgs/image12.png" alt="vignetta"></div>
-              </div>
-            </div>
       </article>
 
       <article>
@@ -232,16 +286,31 @@ Software Engineer, yours is the right to <br>produce high-quality work at all ti
             <div class="first">
               <p class="pad">Leave No Trace</p>
             </div>
-              <span>
-                How product designers can break from <br>the status quo and help our planet
+            <span class="visible">
+              How product designers can break from <br />the status quo and help
+              our planet
+            </span>
+            <span class="nascondino">
+                How product designers can break from the status quo and help
+                our planet
               </span>
-              <div class="second">
-                <span>Oct 25 · 11 min read ·</span> <span class="news">Sustainability </span>
-            <img class="fusione" src="/base_di_partenza/assets/imgs/svg/star.svg" alt="star"> <img id="mark" src="/base_di_partenza/assets/imgs/svg/bookmark.svg" alt="bookmark">
-        </div>
-                <div id="paesaggio"><img src="./assets/imgs/image14.png" alt="paesaggio"></div>
-              </div>
+            <div class="second">
+              <span>Oct 25 · 11 min read ·</span>
+              <span class="news">Sustainability </span>
+              <img
+                class="fusione"
+                src="/base_di_partenza/assets/imgs/svg/star.svg"
+                alt="star" />
+              <img
+                id="mark"
+                src="/base_di_partenza/assets/imgs/svg/bookmark.svg"
+                alt="bookmark" />
             </div>
+            <div id="paesaggio" >
+              <img src="./assets/imgs/image14.png" alt="paesaggio" />
+            </div>
+          </div>
+        </div>
       </article>
 
       <article>
@@ -250,39 +319,70 @@ Software Engineer, yours is the right to <br>produce high-quality work at all ti
             <img class="size" src="./assets/imgs/image13.png" alt="photo 13" />
             <p class="scri">Scott H. Young</p>
             <div class="first">
-              <p class="pad">Variability, Not Repetition, is <br>the Key to Mastery</p>
+              <p class="pad" id="visible">
+                Variability, Not Repetition, is <br />the Key to Mastery
+              </p>
+              <p class="pad" id="nascondino">
+                Variability, Not Repetition, is the Key to Mastery
+              </p>
             </div>
-              <span>
-                Bruce Lee is reported to have said, “I fear  <br>not the man who has practiced 10,000...
-              </span>
-              <div class="second">
-                <span>Oct 26 · 7 min read ·</span> <span class="news">Health </span>
-            <img class="fusione" src="/base_di_partenza/assets/imgs/svg/star.svg" alt="star"> <img id="book2" src="/base_di_partenza/assets/imgs/svg/bookmark.svg" alt="bookmark">
+            <span class="visible">
+              Bruce Lee is reported to have said, “I fear <br />not the man who
+              has practiced 10,000...
+            </span>
+            <span class="nascondino">Bruce Lee is reported to have said, “I fear not the man who has <br> practiced 10,000 kicks once, but the man who has practiced one kick 10,000...</span>
+            <div class="second">
+              <span>Oct 26 · 7 min read ·</span>
+              <span class="news">Health </span>
+              <img
+                class="fusione"
+                src="/base_di_partenza/assets/imgs/svg/star.svg"
+                alt="star" />
+              <img
+                id="book2"
+                src="/base_di_partenza/assets/imgs/svg/bookmark.svg"
+                alt="bookmark" />
+            </div>
+            <div class="lavagna">
+              <img src="./assets/imgs/image16.jpg" alt="kun.fu" />
+            </div>
+          </div>
         </div>
-                <div class="lavagna"><img src="./assets/imgs/image16.jpg" alt="kun.fu"></div>
-              </div>
-            </div>
       </article>
 
       <article>
         <div class="all-footer">
           <div class="com">
             <img id="pallina" src="./assets/imgs/image17.png" alt="photo 17" />
-            <p class="scri">Paul A. DeStefanoin Human Parts
-            </p>
+            <p class="scri">Paul A. DeStefanoin Human Parts</p>
             <div class="first">
-              <p class="pad">What I Overheard as an <br>Escape Room Actor</p>
+              <p class="pad" id="visible">What I Overheard as an <br />Escape Room Actor</p>
+              <p class="pad" id="nascondino">What I Overheard as an Escape Room Actor</p>
             </div>
-              <span>
-                Lock a group of people in a room and <br> you’ll witness some surprising ...
-              </span>
-              <div class="second">
-                <span>Jan 18 · 6 min read ·</span> <span class="news">Experiences</span>
-            <img class="fusione" src="/base_di_partenza/assets/imgs/svg/star.svg" alt="star"> <img class="book-maker" src="/base_di_partenza/assets/imgs/svg/bookmark.svg" alt="bookmark">
+            <span class="visible">
+              Lock a group of people in a room and <br />
+              you’ll witness some surprising ...
+            </span>
+            <span class="nascondino">Lock a group of people in a room and you’ll witness some <br> surprising confessions</span>
+            <div class="second">
+              <span>Jan 18 · 6 min read ·</span>
+              <span class="news">Experiences</span>
+              <img
+                class="fusione"
+                src="/base_di_partenza/assets/imgs/svg/star.svg"
+                alt="star" />
+              <img
+                class="book-maker"
+                src="/base_di_partenza/assets/imgs/svg/bookmark.svg"
+                alt="bookmark" />
+            </div>
+            <div class="lavagna">
+              <img
+                src="/base_di_partenza/assets/imgs/image18.jpeg"
+                alt="sfondo rosso" />
+            </div>
+          </div>
         </div>
-                <div class="lavagna"><img src="/base_di_partenza/assets/imgs/image18.jpeg" alt="sfondo rosso"></div>
-              </div>
-            </div>
       </article>
 
       <article>
@@ -291,30 +391,51 @@ Software Engineer, yours is the right to <br>produce high-quality work at all ti
             <img class="size" src="./assets/imgs/image19.jpeg" alt="photo 19" />
             <p class="scri">Kim Scott</p>
             <div class="first">
-              <p class="pad">6 Steps for Setting <br> Measurable Goals to Avoid <br>“Productivity Paranoia”</p>
+             <p class="pad" id="visible">
+                6 Steps for Setting <br />
+                Measurable Goals to Avoid <br />“Productivity Paranoia”
+              </p> 
+              <p class="pad" id="nascondino">
+                6 Steps for Setting Measurable Goals to <br> Avoid“Productivity Paranoia”
+              </p> 
             </div>
-              <span>
-                With more people working in remote and <br> hybrid environments than ever before...
-              </span>
-              <div class="second">
-                <span>Oct 24 · 6 min read ·</span> <span class="news">Health</span>
-            <img class="fusione" src="/base_di_partenza/assets/imgs/svg/star.svg" alt="star"> <img id="book2" src="/base_di_partenza/assets/imgs/svg/bookmark.svg" alt="bookmark">
+            <span class="visible">
+              With more people working in remote and <br />
+              hybrid environments than ever before...
+            </span>
+            <span class="nascondino">With more people working in remote and hybrid environments <br> than ever before, company, team and individual goals must be explicit and…</span>
+            <div class="second">
+              <span>Oct 24 · 6 min read ·</span>
+              <span class="news">Health</span>
+              <img
+                class="fusione"
+                src="/base_di_partenza/assets/imgs/svg/star.svg"
+                alt="star" />
+              <img
+                id="book2"
+                src="/base_di_partenza/assets/imgs/svg/bookmark.svg"
+                alt="bookmark" />
+            </div>
+            <div class="lavagna">
+              <img
+                src="/base_di_partenza/assets/imgs/image20.jpg"
+                alt="lavagna" />
+            </div>
+          </div>
         </div>
-                <div class="lavagna"><img src="/base_di_partenza/assets/imgs/image20.jpg" alt="lavagna"></div>
-              </div>
-            </div>
       </article>
     </footer>
     <!-- ARTWORK con "M" ripetute -->
     <svg
+      class="medium"
       xmlns="http://www.w3.org/2000/svg"
       viewBox="0 0 585 462"
       width="585"
       height="462"
       preserveAspectRatio="xMidYMid meet"
       style="
-        width: 100%;
-        height: 100%;
+        width: 73%;
+        height: 71%;
         transform: translate3d(0px, 0px, 0px);
         content-visibility: visible;
       ">
