--- a/base_di_partenza/index.html
+++ b/base_di_partenza/index.html
@@ -101,7 +101,10 @@
                 The Night Paul McCartney Donned a Disguise at Fillmore East
               </p>
               <div class="space">
-                <span>Oct 22</span> <span>·</span> <span>3 min read</span>
+                <span>Oct 22</span> <span>·</span> <span>3 min read  <span class="only"><img
+                    class="fusione"
+                    src="/base_di_partenza/assets/imgs/svg/star.svg"
+                    alt="star" /></span></span>
               </div>
             </div>
           </div>
@@ -120,7 +123,10 @@
                 Advanced
               </p>
               <div class="space">
-                <span>Oct 13</span> <span>·</span> <span>6 min read</span>
+                <span>Oct 13</span> <span>·</span> <span>6 min read  <span class="only"><img
+                    class="fusione"
+                    src="/base_di_partenza/assets/imgs/svg/star.svg"
+                    alt="star" /></span></span>
               </div>
             </div>
           </div>
@@ -134,9 +140,12 @@
             <img src="./assets/imgs/image06.png" alt="photo 6" />
             <p class="par">Wesley Smits in JavaScript in Plain English</p>
             <div>
-              <p class="space1">How To Make Visual Studio Code Look Amazing</p>
+              <p class="space1">How To Make Visual Studio Code Look Amazing</p> 
               <div class="space">
-                <span>Oct 20</span> <span>·</span> <span>7 min read</span>
+                <span>Oct 20</span> <span>·</span> <span>7 min read <span class="only"><img
+                    class="fusione"
+                    src="/base_di_partenza/assets/imgs/svg/star.svg"
+                    alt="star" /></span></span>
               </div>
             </div>
           </div>
@@ -144,6 +153,7 @@
       </section>
     </main>
     <footer>
+        <div>
       <h3>DISCOVER MORE OF WHAT MATTERS TO YOU</h3>
       <div class="content" id="first">
         <p>Programming</p>
@@ -168,6 +178,8 @@
         <p>About</p>
         <p>Knowable</p>
       </section>
+    </div>
+    <div id="late">
       <article>
         <div class="all-footer">
           <div class="com">
@@ -424,18 +436,16 @@
           </div>
         </div>
       </article>
+    </div>
     </footer>
     <!-- ARTWORK con "M" ripetute -->
-    <svg
+    <div><svg
       class="medium"
       xmlns="http://www.w3.org/2000/svg"
       viewBox="0 0 585 462"
       width="585"
       height="462"
       preserveAspectRatio="xMidYMid meet"
-      style="
-        width: 73%;
-        height: 71%;
         transform: translate3d(0px, 0px, 0px);
         content-visibility: visible;
       ">
@@ -8520,5 +8530,6 @@
         </g>
       </g>
     </svg>
+</div>
   </body>
 </html>
